// Vitest Snapshot v1

exports[`dts > components only 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
}
"
`;

exports[`dts > directive only 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;

exports[`dts > generate components with prefix - object 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    Book: typeof import('./../examples/vite-vue3/src/components/book/index.vue')['default']
    CollapseFolderAndComponentFromRoot: typeof import('./../examples/vite-vue3/src/components/collapse/collapseFolder/CollapseFolderAndComponentFromRoot.vue')['default']
    ComponentA: typeof import('./../examples/vite-vue3/src/components/ComponentA.vue')['default']
    ComponentAsync: typeof import('./../examples/vite-vue3/src/components/ComponentAsync.vue')['default']
    ComponentB: typeof import('./../examples/vite-vue3/src/components/ComponentB.vue')['default']
    ComponentC: typeof import('./../examples/vite-vue3/src/components/component-c.vue')['default']
    ComponentD: typeof import('./../examples/vite-vue3/src/components/ComponentD.vue')['default']
    ElAvatar: typeof import('./../examples/vite-vue3/src/components/global/avatar.vue')['default']
    ElButton: typeof import('./../examples/vite-vue3/src/components/ui/button.vue')['default']
    ElCheckbox: typeof import('./../examples/vite-vue3/src/components/ui/nested/checkbox.vue')['default']
    FolderAndComponentPartially: typeof import('./../examples/vite-vue3/src/components/collapse/collapseFolder/FolderAndComponentPartially.vue')['default']
    Recursive: typeof import('./../examples/vite-vue3/src/components/Recursive.vue')['default']
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
}
"
`;

exports[`dts > generate components with prefix - string 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    ElAvatar: typeof import('./../examples/vite-vue3/src/components/global/avatar.vue')['default']
    ElBook: typeof import('./../examples/vite-vue3/src/components/book/index.vue')['default']
    ElButton: typeof import('./../examples/vite-vue3/src/components/ui/button.vue')['default']
    ElCheckbox: typeof import('./../examples/vite-vue3/src/components/ui/nested/checkbox.vue')['default']
    ElCollapseFolderAndComponentFromRoot: typeof import('./../examples/vite-vue3/src/components/collapse/collapseFolder/CollapseFolderAndComponentFromRoot.vue')['default']
    ElComponentA: typeof import('./../examples/vite-vue3/src/components/ComponentA.vue')['default']
    ElComponentAsync: typeof import('./../examples/vite-vue3/src/components/ComponentAsync.vue')['default']
    ElComponentB: typeof import('./../examples/vite-vue3/src/components/ComponentB.vue')['default']
    ElComponentC: typeof import('./../examples/vite-vue3/src/components/component-c.vue')['default']
    ElComponentD: typeof import('./../examples/vite-vue3/src/components/ComponentD.vue')['default']
    ElFolderAndComponentPartially: typeof import('./../examples/vite-vue3/src/components/collapse/collapseFolder/FolderAndComponentPartially.vue')['default']
    ElRecursive: typeof import('./../examples/vite-vue3/src/components/Recursive.vue')['default']
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
}
"
`;

exports[`dts > getDeclaration 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;

exports[`dts > parseDeclaration - has icon component like <IMdi:diceD12> 1`] = `
{
  "component": {
    "ComponentA": "typeof import('./src/components/ComponentA.vue')['default']",
    "IMdi:diceD12": "typeof import('~icons/mdi/dice-d12')['default']",
    "IMdiLightAlarm": "typeof import('~icons/mdi-light/alarm')['default']",
  },
  "directive": {},
}
`;

exports[`dts > parseDeclaration - with directives 1`] = `
{
  "component": {
    "ComponentA": "typeof import('./src/components/ComponentA.vue')['default']",
    "IMdi:diceD12": "typeof import('~icons/mdi/dice-d12')['default']",
    "IMdiLightAlarm": "typeof import('~icons/mdi-light/alarm')['default']",
  },
  "directive": {
    "vDirective": "typeof import('foo')",
    "vLoading": "typeof import('test/directive/Loading')['default']",
    "vSome": "typeof import('test/directive/Some')['default']",
  },
}
`;

exports[`dts > parseDeclaration 1`] = `
{
  "component": {
    "ComponentA": "typeof import('./src/components/ComponentA.vue')['default']",
    "ComponentB": "typeof import('./src/components/ComponentB.vue')['default']",
    "ComponentC": "typeof import('./src/components/component-c.vue')['default']",
  },
  "directive": {},
}
`;

exports[`dts > vue 2.7 components only 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
export {}

declare module 'vue' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
}
"
`;

exports[`dts > writeDeclaration - keep unused 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    SomeComp: typeof import('test/component/SomeComp')['default']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vDirective: typeof import('foo')
    vLoading: typeof import('test/directive/Loading')['default']
    vSome: typeof import('test/directive/Some')['default']
  }
}
"
`;

exports[`dts > writeDeclaration 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// Generated by unplugin-vue-components
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

export {}

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}
"
`;
